--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -112,6 +112,18 @@
             android:id="@+id/BackToETfmile"
             app:destination="@id/entertainment_page" />
     </fragment>
+<!--    <androidx.fragment.app.FragmentContainerView-->
+<!--        android:id="@+id/nav_host_fragment"-->
+<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:defaultNavHost="true"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="parent"-->
+<!--        app:navGraph="@navigation/nav_graph"-->
+<!--        />-->
     <fragment
         android:id="@+id/milestone_achievment_2"
         android:name="com.example.unbrokebudgetapplication.milestone_achievment_2"
