--- a/app/src/main/res/layout/fragment_forgot_pass.xml
+++ b/app/src/main/res/layout/fragment_forgot_pass.xml
@@ -86,7 +86,19 @@
         app:layout_constraintStart_toEndOf="@+id/TVOtherMethod"
         app:layout_constraintTop_toBottomOf="@+id/ETEnterEmail" />
 
-<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
+    <ImageView
+        android:id="@+id/IVBackBtn"
+        android:onClick="backFunction"
+        android:layout_width="55dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
 <!--    <TextView-->
 <!--        android:id="@+id/textView4"-->
 <!--        android:layout_width="0dp"-->
