--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="440dp"
             android:gravity="center"
-            android:text="Unbroke"
+            android:text="UnBroke"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
