--- a/app/src/main/res/layout/fragment_lucky_wheel.xml
+++ b/app/src/main/res/layout/fragment_lucky_wheel.xml
@@ -1,67 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RL_LW"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1A434E"
-    tools:context=".lucky_wheel" >
+    tools:context=".lucky_wheel">
+
 
     <TextView
         android:id="@+id/TVluckydraw"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="65dp"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="LUCKY DRAW"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+    <ImageView
+        android:id="@+id/wheel"
+        android:layout_width="313dp"
+        android:layout_height="320dp"
+        android:adjustViewBounds="true"
+        android:scaleType="center"
+        android:src="@drawable/group_1__1_"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/group_1"
-            android:adjustViewBounds="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:scaleType="center">
+    </ImageView>
 
-        </ImageView>
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/belt"
+        android:layout_width="317dp"
+        android:layout_height="338dp"
+        android:adjustViewBounds="true"
+        android:scaleType="center"
+        android:src="@drawable/group_2__1_"
+        app:layout_constraintBottom_toBottomOf="@+id/wheel"
+        app:layout_constraintEnd_toEndOf="@+id/wheel"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="@+id/wheel"
+        app:layout_constraintTop_toTopOf="@+id/wheel"
+        app:layout_constraintVertical_bias="1.0">
+
+    </ImageView>
 
     <Button
         android:id="@+id/Btnspin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#E5E5E5"
+        android:layout_marginBottom="80dp"
+        android:background="#e5e5e5"
         android:text="SPIN"
         android:textSize="20sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TextContrastCheck" />
+
+    <TextView
+        android:id="@+id/earnings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Result"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVluckydraw" />
 
     <ImageButton
-        android:id="@+id/IBBackBtn"
-        android:layout_width="50dp"
+        android:id="@+id/IBBacket"
+        android:layout_width="49dp"
         android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="661dp"
         android:background="#1A434E"
-        tools:ignore="SpeakableTextPresentCheck"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24" />
+        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
+        tools:ignore="SpeakableTextPresentCheck"/>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
