--- a/app/src/main/res/layout/fragment_money_record.xml
+++ b/app/src/main/res/layout/fragment_money_record.xml
@@ -475,8 +475,8 @@
                         android:drawableTop="@drawable/more"
                         android:fontFamily="sans-serif"
                         android:paddingTop="15dp"
-                        android:paddingBottom="35dp"
-                        android:text="View detail"
+                        android:paddingBottom="25dp"
+                        android:text="View your actual spending"
                         android:textAllCaps="false"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
