--- a/app/src/main/res/layout/fragment_point_redemption.xml
+++ b/app/src/main/res/layout/fragment_point_redemption.xml
@@ -259,12 +259,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="15000 pts"
+                    android:text="15000"
                     android:textColor="@color/white"
                     android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/IVpoints1"
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints1"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints1"
                     app:layout_constraintTop_toTopOf="@+id/IVpoints1" />
@@ -274,12 +274,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="42000 pts"
+                    android:text="42000"
                     android:textColor="@color/white"
                     android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/IVpoints2"
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints2"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints2"
                     app:layout_constraintTop_toTopOf="@+id/IVpoints2" />
@@ -289,14 +289,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="6dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="50000 pts"
+                    android:text="50000"
                     android:textColor="@color/white"
                     android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/IVpoints3"
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints3"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0.451"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints3"
                     app:layout_constraintTop_toTopOf="@+id/IVpoints3" />
 
@@ -305,12 +307,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="35000 pts"
+                    android:text="35000"
                     android:textColor="@color/white"
                     android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/IVpoints4"
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints4"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints4"
                     app:layout_constraintTop_toTopOf="@+id/IVpoints4" />
@@ -322,14 +324,17 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="5dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="45000 pts"
+                    android:text="45000"
                     android:textColor="@color/white"
                     android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/IVpoints5"
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints5"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_bias="0.466"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints5"
-                    app:layout_constraintTop_toTopOf="@+id/IVpoints5" />
+                    app:layout_constraintTop_toTopOf="@+id/IVpoints5"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/TVpts6"
@@ -338,10 +343,12 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="5dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="56000 pts"
+                    android:text="56000"
                     android:textColor="@color/white"
                     android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/IVpoints6"
                     app:layout_constraintEnd_toEndOf="@+id/IVpoints6"
                     app:layout_constraintStart_toStartOf="@+id/IVpoints6"
                     app:layout_constraintTop_toTopOf="@+id/IVpoints6" />
