--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ratedPoint" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/editTextFeedback"
         android:layout_width="353dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
@@ -87,7 +87,7 @@
         android:textColor="@color/white"
         android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextFeedback" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
