--- a/app/src/main/res/layout/fragment_account_setting.xml
+++ b/app/src/main/res/layout/fragment_account_setting.xml
@@ -62,26 +62,27 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/IVProfilePic"
                     android:layout_width="102dp"
                     android:layout_height="103dp"
                     android:layout_marginStart="28dp"
                     android:layout_marginBottom="52dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:src="@tools:sample/avatars" />
+                    app:srcCompat="@drawable/profile_user_avatar_man_person_svgrepo_com" />
+<!--                    tools:src="@tools:sample/avatars" />-->
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/TVUserName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginBottom="92dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="52dp"
+                    android:text="Username"
                     android:textColor="@color/white"
                     android:textSize="20dp"
-                    android:text="Username"
                     app:layout_constraintBottom_toBottomOf="@+id/IVBGBack"
-                    app:layout_constraintStart_toEndOf="@+id/imageView3" />
+                    app:layout_constraintStart_toEndOf="@+id/IVProfilePic" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
